force-app/main/default/objects/CustomTeams__Team_Members__c/CustomTeams__Team_Members__c.object-meta.xml
<CustomObject>
    <description>Used to store Team Members on a Team</description>
    <label>Team Members</label>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Team Members</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>