force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Access_Level__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Access_Level__c</fullName>
    <label>Access Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Read</fullName>
            </value>
            <value>
                <fullName>Edit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>