force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Duplicate_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Duplicate_Team_Member__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Duplicate Team Member</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>