force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Merge_field__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Merge_field__c</fullName>
    <formula>CustomTeams__Team__r.Id +  CustomTeams__User__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merge field</label>
    <type>Text</type>
</CustomField>