force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Role__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Role__c</fullName>
    <label>Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>CustomTeams__Roles</valueSetName>
    </valueSet>
</CustomField>