force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Team__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Team__c</fullName>
    <description>Used to map the team member to a team</description>
    <label>Team</label>
    <referenceTo>CustomTeams__Teams__c</referenceTo>
    <relationshipLabel>Team Members</relationshipLabel>
    <relationshipName>Team_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>