force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__Team_Owner__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__Team_Owner__c</fullName>
    <formula>CustomTeams__Team__r.OwnerId</formula>
    <label>Team Owner</label>
    <type>Text</type>
</CustomField>