force-app/main/default/objects/CustomTeams__Team_Members__c/fields/CustomTeams__User__c.field-meta.xml
<CustomField>
    <fullName>CustomTeams__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to map a User to a Team</description>
    <label>User</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>User is not active</errorMessage>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Team_Members</relationshipName>
    <type>Lookup</type>
</CustomField>