force-app/main/default/objects/CustomTeams__Team_Members__c/validationRules/CustomTeams__Do_not_change_Team_or_Team_Member.validationRule-meta.xml
<ValidationRule>
    <fullName>CustomTeams__Do_not_change_Team_or_Team_Member</fullName>
    <active>true</active>
    <description>Do_not_change_Team_or_Team_Member</description>
    <errorConditionFormula>OR (
ISCHANGED ( CustomTeams__Team__c ) ,
ISCHANGED (  CustomTeams__User__c )
)</errorConditionFormula>
    <errorMessage>Team or User cannot be changed on a Team Member record.</errorMessage>
</ValidationRule>